# VapourSynth-EEDI2CUDA

./: CMakeLists.txt  EEDI2.cu  EEDI2_avs.cu
.github/workflows/: build.yml
